@startuml
skinparam titleBorderRoundCorner 15
skinparam titleBorderThickness 2
skinparam titleBorderColor red
skinparam titleBackgroundColor Aqua-CadetBlue
title ReadKeeper Book Class Diagram v2.0
class BasicInfo {
    title: String
    imageUrl: String
    author: String
    pages: Int
    rating: Double
    pubYear: Int
}
class TimeInfo {
    addedTime: Timestamp
    editedTime: Timestamp
}
enum Platform {
    Paper
    PDF
    Apple_BOOK
    WECHAT
    KINDLE
    GOOGLE
    GENERAL
}
enum PageFormat {
    PAGE
    PERCENTAGE
}
enum Status {
    READING
    WISH
    ARCHIVED
    SEARCH
}
class Record {
    uuid: String
    startPage: Int
    endPage: Int
    timestamp: Timestamp
}
class Note {
    uuid: String
    note: String
    position: Int
    timestamp: Timestamp
}

TimeInfo <-- Book
BasicInfo <-- Book
Status <-- Book
Platform <-- Book
PageFormat <-- Book
Record <-- Book
Note <-- Book

class Book {
    status: Status
    platform: Platform
    pageFormat: PageFormat
    timeInfo: TimeInfo
    records: List<Record>
    notes: List<Note>
}
class BookEntity {
    title: String
    imageUrl: String
    author: String
    pages: Int
    rating: Double
    pubYear: Int
}
class RecordEntity {
    uuid: String
    startPage: Int
    endPage: Int
    timestamp: Timestamp
}
class NoteEntity {
    uuid: String
    note: String
    position: Int
    timestamp: Timestamp   
}
class BookDto {

}
@enduml